--- a/analyze appply extend/apply/html.html
+++ b/analyze appply extend/apply/html.html
@@ -6,7 +6,9 @@
 -->
 
 <html lang="en">
-<head>
+<headanalyze appply extend
+  <alt> </alt>/apply/images/web-design.jpg> height 326, width 450 
+
 	<title>CH 3 Apply Your Knowledge</title>
 	<meta charset="utf-8">
 </head>
